# family-slideshow-app

./: .env.compose.template  .env.template  .gitignore  README.md  Taskfile.yml  compose.dev.yml  compose.yml  index.html  main.py  package.json  pyproject.toml  tsconfig.json  vite.config.ts
alembic/versions/: 969afd72c54c_add_collections.py
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f2f2cdaca08d_initial_schema.py
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/models/: collection.py  photo.py  photo_collection_junction.py  session.py  user.py
backend/src/routers/: __init__.py  auth.py  collections.py  photos.py
backend/src/schemas/: __init__.py  auth.py  collection.py
backend/src/services/: auth_service.py  image_token_service.py  photo_service.py  seed_service.py
backend/src/storage/: files.py
backend/src/tools/: smoke_test_storage.py
backend/src/utils/: datetime.py
frontend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.MD  nginx.conf  package-lock.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
notes/: migrate_to_monorepo.md
src/: App.css  App.tsx  config.py  index.css  main.py  main.tsx
src/api/: auth.ts  collections.ts  photos.ts
src/hooks/: useAuth.ts  useCollections.ts  usePhotos.ts  useSlideshow.ts  useTheme.tsx
src/lib/: api.ts
src/mocks/: photos.ts
src/models/: __init__.py  photo.py  session.py  users.py
src/pages/: AdminPage.tsx  LoginPage.tsx  (+1 more)
(+46 files in other folders)
